--- a/Proteins/pixi.toml
+++ b/Proteins/pixi.toml
@@ -11,3 +11,6 @@ version = "0.1.0"
 py3dmol = ">=2.5.2,<3"
 ipykernel = ">=6.30.1,<7"
 requests = ">=2.32.5,<3"
+numpy = ">=2.3.2,<3"
+jax = ">=0.7.0,<0.8"
+seaborn = ">=0.13.2,<0.14"
